[package]
name = "gitree"
version = "0.2.0"
authors = ["Muhammad Mominul Huque <mominul2082@gmail.com>"]
license = "GPL-2.0-only"
description = "A Rust crate wrapping the git-subtree script."
repository = "https://github.com/mominul/gitree"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
run_script = "0.6"
